[package]
name = "leptos_image"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: Change incorporate into features.
leptos = { version = "0.4.2" }
leptos_router = { version = "0.4.2" }
leptos_meta = { version = "0.4.2"}

wasm-bindgen = "=0.2.87"
web-sys = { version = "0.3", optional = true, features = [
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "ImageData",
]}

tokio = { version = "1.25.0", features = ["rt", "fs"], optional = true }
axum = { version = "0.6.4", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }

image = { version = "0.24.6", optional = true}
webp = { version= "0.2.2", optional = true}
serde = { version = "1.0.164", features = ["derive"] }
serde_qs = "0.12.0"
thiserror = "1.0.38"
base64 = "0.21.2"
lazy_static = "1.4.0"
futures = "0.3.28"
glob = "0.3.1"

[features]
ssr = [ "dep:webp", "dep:tokio", "dep:image", "dep:axum", "dep:tower", "dep:tower-http", "leptos_router/ssr" ]
hydrate = [ "dep:web-sys"]
